--- a/app/views/current/views/water/answers.html
+++ b/app/views/current/views/water/answers.html
@@ -13,11 +13,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
-    <div class="govuk-panel govuk-panel--confirmation">
-      <h1 class="govuk-panel__title">HIGH FIT</h1>
+    <div class="govuk-panel govuk-panel--confirmation" style="background: #ffae33">
+      <h1 class="govuk-panel__title">MEDIUM FIT</h1>
     </div>
 
-    <p>Based on your answers, your project is a high fit with the funding priorities.</p>
+    <p>Based on your answers, your project is a medium fit with the funding priorities.</p>
     <p>The grant is highly competitive and you are competing against other projects.</p>
 
     <h3 class="govuk-heading-m">What happens next</h3>
