--- a/app/views/current/views/water/remaining-costs.html
+++ b/app/views/current/views/water/remaining-costs.html
@@ -13,7 +13,7 @@ Meeting the remaining project costs
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form class="form" action="{{ nextUrl }}" method="post">
+    <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
       {% set remainingCosts = data['project-cost'] * 0.6 %}
 
@@ -43,7 +43,16 @@ Meeting the remaining project costs
           </div>
       </div>
 
-      <button class="govuk-button" data-module="govuk-button">Continue</button>
+      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+
+      {% if data['COMPLETED'] == true %}
+        <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+          class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+        >
+          Back to summary page
+        </button>
+      {% endif %}
+
 
     </form>
 
