--- a/app/views/current/views/water/project-summary.html
+++ b/app/views/current/views/water/project-summary.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="{{ nextUrl }}" method="post">
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <h1 class="govuk-heading-l">Project summary</h1>
 
         <div class="govuk-form-group">
@@ -45,6 +45,15 @@
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
+
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+          >
+            Back to summary page
+          </button>
+        {% endif %}
+
 
       </form>
 
