--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -26,36 +26,20 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="farming-type-1" name="farming-type" type="radio" value="yes" {{ checked("farming-type", "yes") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type-1">
-                  Yes
+                  Crops for the food industry
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type-2" name="farming-type" type="radio" value="no" data-aria-controls="conditional-farming-type-2-options" {{ checked("farming-type", "no") }}>
-                <label class="govuk-label govuk-radios__label" for="farming-type-2">
-                  No
+                <input class="govuk-radios__input" id="farming-type-1" name="farming-type" type="radio" value="yes" {{ checked("farming-type", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="farming-type-1">
+                  Horticulture (including ornamentals)
                 </label>
               </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-farming-type-2-options">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="farming-type-other-options-1" name="farming-type-other-options" type="radio" value="growing flowers" {{ checked("farming-type-other-options", "growing flowers") }}>
-                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-1">
-                    Growing flowers
-                  </label>
-                </div>
-            
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="farming-type-other-options-2" name="farming-type-other-options" type="radio" value="forestry" {{ checked("farming-type-other-options", "forestry") }}>
-                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-2">
-                    Forestry
-                  </label>
-                </div>
-                
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="farming-type-other-options-3" name="farming-type-other-options" type="radio" value="something else" {{ checked("farming-type-other-options", "something else") }}>
-                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-3">
-                    Something else
-                  </label>
-                </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="farming-type-1" name="farming-type" type="radio" value="no" {{ checked("farming-type", "no") }}>
+                <label class="govuk-label govuk-radios__label" for="farming-type-1">
+                  Something else
+                </label>
               </div>
             </div>
           </fieldset>
