--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -24,40 +24,24 @@
             </legend>
             <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type-1" name="farming-type" type="radio" value="yes" {{ checked("farming-type", "yes") }}>
+                <input class="govuk-radios__input" id="farming-type-1" name="farming-type" type="radio" value="Crops for the food industry" {{ checked("farming-type", "Crops for the food industry") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type-1">
-                  Yes
+                  Crops for the food industry
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="farming-type-2" name="farming-type" type="radio" value="no" data-aria-controls="conditional-farming-type-2-options" {{ checked("farming-type", "no") }}>
+                <input class="govuk-radios__input" id="farming-type-2" name="farming-type" type="radio" value="Horticulture" {{ checked("farming-type", "Horticulture") }}>
                 <label class="govuk-label govuk-radios__label" for="farming-type-2">
-                  No
+                  Horticulture (including ornamentals)
                 </label>
               </div>
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-farming-type-2-options">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="farming-type-other-options-1" name="farming-type-other-options" type="radio" value="growing flowers" {{ checked("farming-type-other-options", "growing flowers") }}>
-                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-1">
-                    Growing flowers
-                  </label>
-                </div>
-            
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="farming-type-other-options-2" name="farming-type-other-options" type="radio" value="forestry" {{ checked("farming-type-other-options", "forestry") }}>
-                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-2">
-                    Forestry
-                  </label>
-                </div>
-                
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="farming-type-other-options-3" name="farming-type-other-options" type="radio" value="something else" {{ checked("farming-type-other-options", "something else") }}>
-                  <label class="govuk-label govuk-radios__label" for="farming-type-other-options-3">
-                    Something else
-                  </label>
-                </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="farming-type-3" name="farming-type" type="radio" value="Something else" {{ checked("farming-type", "Something else") }}>
+                <label class="govuk-label govuk-radios__label" for="farming-type-3">
+                  Something else
+                </label>
               </div>
-            </div>
+              </div>
           </fieldset>
         </div>
 
