--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -48,6 +48,12 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-10" name="legal-status" type="radio" value="Local authority" {{ checked("legal-status", "Local authority") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-10">
+                  Local authority
+                </label>
+              </div>
+              <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-2" name="legal-status" type="radio" value="partnership" {{ checked("legal-status", "partnership") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-2">
                   Partnership
