--- a/app/views/current/views/water/collaboration.html
+++ b/app/views/current/views/water/collaboration.html
@@ -21,6 +21,7 @@
               <h1 class="govuk-fieldset__heading">
                 Will water be supplied to other farms?
               </h1>
+              <h3 class="govuk-caption-m">If you intend to supply water via a water sharing agreement as a result of this project.</h3>
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
