--- a/app/views/water/current/project-cost.html
+++ b/app/views/water/current/project-cost.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -16,23 +24,19 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="project-cost">
-              What is the estimated cost<br> of the items?
-            </label>
-          </h1>
-          <div id="account-number-hint" class="govuk-hint">
-            You can only apply for a grant of up to 40% of the estimated costs. Do not include VAT.
+          <h1 class="govuk-heading-l">What is the estimated cost of the items?</h1>
+          <div class="govuk-hint">
+            You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £35,000 (40% of £87,500).
+The maximum grant is £500,000.
           </div>
-          <br>
-          <div class="govuk-body">
-           Pounds
-          <span class="govuk-caption-m">For example 95000</span>
+
+          <span class="govuk-caption-m">Enter amount, for example 95,000</span>
           <div class="govuk-input__wrapper govuk-!-margin-top-4">
-          <span  class="govuk-input__prefix" aria-hidden="true">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
-          </div>
+          <span  class="govuk-input__prefix" aria-hidden="true">£</span>
+          <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
+
           </div>
         </div>
-        <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
         {% if data['COMPLETED'] == true %}
@@ -50,7 +54,7 @@
     <div class="govuk-grid-column-one-third">
 
       <aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
+        <h2 class="govuk-heading-s" id="subsection-title">
           Items selected
         </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
