--- a/app/views/water/current/project-items.html
+++ b/app/views/water/current/project-items.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -24,14 +32,14 @@
             </legend>
             <br>
             <span id="project-items-hint" class="govuk-hint">
-              The minimum grant you can apply for is £35,000 (40% of £87,500). The maximum grant is £1 million.
+              Select all the items your project needs
             </span>
           <h2 class="govuk-heading-m govuk-!-margin-top-6">Reservoir construction and infrastructure</h2>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-items-1" name="project-items" type="checkbox" value="dam walls" {{ checked("project-items", "dam walls") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-1">
-                  Construction of dam walls
+                  Construction of reservoir walls
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
@@ -112,7 +120,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="Irrigation equipment-1" name="Irrigation equipment" type="checkbox" value="Boom " {{ checked("Irrigation equipment", "Boom") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="Irrigation equipment-1">
-                  Boom 
+                  Boom
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
