--- a/app/views/water/current/project-start.html
+++ b/app/views/water/current/project-start.html
@@ -5,67 +5,83 @@ Have you already started work on the project?
 {% endblock %}
 
 {% block beforeContent %}
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+  {{ govukPhaseBanner({
+    tag: {
+    text: "prototype",
+    classes: "govuk-tag--pink"
+    },
+      html: 'This is not a full service. It is not production code and you might experience problems.'
+  }) }}
 <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
-<main class="govuk-main-wrapper">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-fieldset__heading">
-              Have you already started work on the project?
-            </h1>
-          </legend>
-          <br><br>
-          <div class="govuk-radios govuk-radios--inline">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="preparatory work" {{ checked("project-start", "preparatory work") }}>
-              <label class="govuk-label govuk-radios__label" for="project-start-2">
-                Yes, preparatory work (for example quotes from suppliers, applying for planning permission) 
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="project work" {{ checked("project-start", "project work") }}>
-              <label class="govuk-label govuk-radios__label" for="project-start-2">
-                Yes, we have begun project work (for example digging, signing contracts, placing orders) 
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="project-start" name="project-start" type="radio" value="No" {{ checked("project-start", "No") }}>
-              <label class="govuk-label govuk-radios__label" for="project-start">
-                 No
-              </label>
-            </div>
-          </div>
-        </fieldset>
-      </div>
-      <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
 
-      {% if data['COMPLETED'] == true %}
-        <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
-          class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button"
-        >
-          Back to summary page
-        </button>
-      {% endif %}
-    </form>
+    <h1 class="govuk-heading-l">Have you already started work on the project?</h1>
+
+
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+
+            <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="sign-in-project-start">
+                <div class="govuk-radios">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="project-start-1" name="project-start" type="radio" value="preparatory work" aria-describedby="project-start-1-item-hint" {{ checked("project-start", "preparatory work") }}>
+                    <label class="govuk-label govuk-radios__label" for="project-start-1">
+                      Yes, preparatory work
+                    </label>
+                    <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                      For example, quotes from suppliers, applying for planning permission
+                    </div>
+                  </div>
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="project work" aria-describedby="project-start-2-item-hint" {{ checked("project-start", "project work") }}>
+                    <label class="govuk-label govuk-radios__label" for="project-start-2">
+                    Yes, we have begun project work
+                    </label>
+                    <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
+                      For example, digging, signing contracts, placing orders
+                    </div>
+                  </div>
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="project-start-3" name="project-start" type="radio" value="No" aria-describedby="project-start-3-item-hint" {{ checked("project-start", "No") }}>
+                    <label class="govuk-label govuk-radios__label" for="project-start-3">
+                      No, we have not done any work on this project yet
+                    </label>
+
+                  </div>
+                </div>
+              </fieldset>
+            </div>
+
+
+    <p> <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+
+
+
+
   </div>
-   <div class="govuk-grid-column-one-third govuk-!-padding-top-5">
-      <aside class="app-related-items">
-        <h3 class="govuk-heading-m"> Eligibility </h3>
+  <div class="govuk-grid-column-one-third">
+
+    <div class="app-step-nav-related app-step-nav-related--singular">
+      <h2 class="app-step-nav-related__heading">
+        <span class="app-step-nav-related__pretitle">Eligibility</span>
+        </h2>
         <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
-        <p>Before you start the project, you can:</p>
-        <ul class="govuk-list govuk-list--bullet">
-            <li>get quotes from suppliers</li>
-            <li>apply for planning permission or an abstraction licence (these can take a long time)</li>
-        </ul>
-      </aside>    
+        <p>Before you start the project, you
+can:
+<ul class="govuk-list govuk-list--bullet">
+  <li>get quotes from suppliers</li>
+  <li> apply for planning permission or an abstraction licence (these can take a long time)</li>
+</ul></p>
+      <a href="#">
+        </a>
+
+    </div>
+    </div>
   </div>
-</div>
-</main>
 
 {% endblock %}
