--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -34,9 +34,9 @@
         <h2 class="govuk-heading-l">Design history</h2>
 
         <p class='govuk-list app-list--definition'>
-          <a href='ahw/current/business' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
+          <a href='ahw/current/legal-status' class="govuk-link--no-visited-state"><strong>Version 1 (current)</a></strong><br>
           User journey currently in build, however 'User and business details' section exists. This prototype has not been tested yet. <br>
-            <span class="govuk-body govuk-!-font-size-14">#Last updated on 4 October 2022<br/>
+            <span class="govuk-body govuk-!-font-size-14">#Last updated on 16 October 2022<br/>
             </span></p>
 
 
